# zune-jpeg

./: .gitignore  Benches.md  Cargo.toml  Changelog.md  README.md  Readme.md  Todo.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: decode.rs  decode_grayscale.rs  decode_prog.rs  decode_x86.rs  huffman.rs  yuv_to_rgb.rs
fuzz/artifacts/decode_buffer/: minimized-from-a8cd0cc0c2070ec5834c90cbaaff78433426a656
fuzz/fuzz_targets/: decode_buffer.rs
src/: bitstream.rs  color_convert.rs  components.rs  decoder.rs  errors.rs  headers.rs  huffman.rs  idct.rs  image.rs  lib.rs  marker.rs  markers.rs  mcu.rs  mcu_prog.rs  misc.rs  options.rs  probe.rs  simd.rs  threads.rs  unsafe_utils.rs  upsampler.rs  worker.rs  yuv_to_rgb.rs
src/color_convert/: avx.rs  scalar.rs  sse.rs
src/idct/: avx2.rs  scalar.rs
src/upsampler/: avx2.rs  scalar.rs  sse.rs
tests/: image_formats.rs  invalid_images.rs  large_images.rs  medium_images.rs  random_images.rs
