[package]
name = "zune-jpeg"
version = "0.1.0"
authors = ["caleb <etemesicaleb@gmail.com>"]
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
x86 = []
default = ["x86"]

[dependencies]
log = "0.4.11" # logging facilities
scoped_threadpool = "0.1.9" # multithreading
num_cpus = "*" # number of threads to spawn.
[dev-dependencies]
criterion = "0.3"
mozjpeg = { version = "*" }
jpeg-decoder = { version = "*" }


[[bench]]
name = "decode"
harness = false

[[bench]]
name = "decode_grayscale"
harness = false


[[bench]]
name = "decode_prog"
harness = false

#[[bench]]
#name = "decode"
#harness = false
#
#[[bench]]
#name = "decode_grayscale"
#harness = false



[profile.bench]
debug = true
