[package]
name = "zune-jpeg"
version = "0.1.3"
authors = ["caleb <etemesicaleb@gmail.com>"]
edition = "2021"
repository="https://github.com/etemesi254/zune-jpeg"
license = "MIT OR Apache-2.0"
keywords=["jpeg","jpeg-decoder","decoder"]
categories=["multimedia::images"]
exclude=["/benches/images/","/tests/*" , "/.idea/*","/.gradle/*"]
description="The fastest jpeg decoder in the west"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
x86 = []
default = ["x86"]

[dependencies]
log = "0.4.11" # logging facilities
scoped_threadpool = "0.1.9" # multithreading
num_cpus = "1.13.1"
[dev-dependencies]
criterion = "0.3"
mozjpeg = "0.9.2"
jpeg-decoder = "0.2.6"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "decode_grayscale"
harness = false


[[bench]]
name = "decode_prog"
harness = false



[profile.bench]
debug = true
